fix spec, adjust controller, add moviedigger api logic
